# microscope_controller

./: StopIndicator.py  ULoggingConfig.py  pyproject.toml
MCC2_Demo_GUI/: UMCC2_Demo_GUI.py
MCC2_Demo_GUI/data/: PMotoren_Positionen.txt  PSoft_Limits.txt
MCC2_Demo_GUI/input/: Emulator_config.csv  Phytron_Motoren_config.csv  Phytron_Motoren_config1.csv  Phytron_Motoren_config2.csv
MainGUI/: MCWidgets.py  gr_field.py
MainGUI/MainGUI/: mainwindow.ui
MicroWatcher/: CameraInterface.py  PlasmaCameraEmulator.py  PlasmaWatcher.py  VimbaCamera.py  camera_interface.py  plasma_camera_emulator.py  test_PlasmaWatcher.py
MotorController/: MotorControllerInterface.py  Phytron_MCC2.py  SmarAct_MCS2.py  test_MotorControllerInterface.py  test_Phytron_MCC2.py  test_command_format.py
MotorController/Phytron_MCC2/: PBox.py  PController.py  PErrors.py  PMotor.py  __init__.py  functions.py
build-MotorControllerDemo-Desktop_Qt_5_12_5_clang_64bit-Debug/Debug/: Debug.bg
experiments/: SmarAct_exp.py  TCP_IP.py  TCP_IP_Telnet.py  TCP_IP_emulator.py  exp.py  exp2.py  exp3.py  multproc_exp.py  sniffer_server.py
mikroskopcontroller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mikroskopcontroller/microwatcher/: camera_interface.py  plasma_camera_emulator.py  plasma_watcher.py  test_PlasmaWatcher.py  vimba_camera.py
mscontr/Demo_GUI/: Demo_GUI.py  PlasmaWindow.py
mscontr/MainGUI/: gr_field.py  main_gui.py  mcwidgets.py  name.py
tests/: test_PlasmaWatcher.py  test_mikroskopcontroller.py
videos/: drift_video.py  plasma_video.py
(+166 files in other folders)
