[tool.poetry]
name = "MicroscopeController"
version = "0.1.0"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
PyQt6 = "^6"
logscolor = {git = "https://github.com/v-usatikov/logscolor.git"}
graphic-ext = {git = "https://github.com/v-usatikov/graphic_ext.git"}
motor-controller = {git = "https://github.com/v-usatikov/motor_controller.git"}#, develop = true}
numpy = "^1"
opencv-python = "^4"
pymba = "^0"
lmfit = "^1"
matplotlib = "^3"
vimbapython = {git = "https://github.com/alliedvision/VimbaPython.git"}
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
